--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Jasmine Spec Runner v3.4.0</title>
@@ -11,22 +12,23 @@
   <script src="lib/jasmine-3.4.0/jasmine-html.js"></script>
   <script src="lib/jasmine-3.4.0/boot.js"></script>
 
-  <!-- include source files here...
-  <script src="src/Player.js"></script>
-  <script src="src/Song.js"></script> 
--->
+  <!-- include source files here...-->
+
   <script src="src/calcs.js"></script>
   <script src="src/calcsm.js"></script>
+  <script src="src/calcsaddin.js"></script> <!--The 2nd TDD-->
+  
 
-  <!-- include spec files here... 
-  <script src="spec/SpecHelper.js"></script>
-  <script src="spec/PlayerSpec.js"></script>
-  -->
+  <!-- include spec files here... -->
+
   <script src="spec/calc.js"></script>
   <script src="spec/calcm.js"></script>
+  <script src="spec/calcaddin.js"></script> <!--The 2nd TDD-->
+  
 
 </head>
 
 <body>
 </body>
+
 </html>
